# python_dsml_mod_3_hw

./: citation_authors.json  pyproject.toml  scrapy_script.py  write_jsons_into_mongo.py
get_citations/: citation_authors.json  citations.json  scrapy.cfg
get_citations/get_citations/: items.py  middlewares.py  pipelines.py  settings.py
get_citations/get_citations/spiders/: get_citations.py
