[tool.poetry]
name = "python-dsml-m3-hw-scrapy"
version = "0.1.0"
description = "web scraping using Scrapy"
authors = ["RomanKhakhula <rkhakhula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
